--- a/config.json
+++ b/config.json
@@ -71,6 +71,12 @@
       "css": "search",
       "code": 59401,
       "src": "entypo"
+    },
+    {
+      "uid": "1bafeeb1808a5fe24484c7890096901a",
+      "css": "user-plus",
+      "code": 62004,
+      "src": "fontawesome"
     }
   ]
 }
